fix: cascader input invisible/table scroll y server render

--- a/client/apps/root/root.less
+++ b/client/apps/root/root.less
@@ -32,6 +32,10 @@ img {
   display: block;
 }
 
+.ant-cascader-picker-label {
+  z-index: 1;
+}
+
 .zmdi-import:before {
   content: '\f1cc';
 }
